k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - example-nodejs.revolgy.com
    secretName: example-nodejs-crt
  rules:
  - host: example-nodejs.revolgy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
